k8S/frontend/gateway-api/frontend_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
spec:
  parentRefs:
    - name: backend-gateway
      # maps to listener named http in backend-gateway (useful for gateways with multiple listeners)
      sectionName: http
  hostnames:
    - front.weatherly
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-service
          port: 8080
